// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navigation/> should render 1`] = `
"<nav>
  <Hamburger open={false} onClick={[Function: onClick]} />
  <div className=\\"navigation-items\\" />
</nav>"
`;

exports[`<Navigation/> should render 2`] = `
"<nav>
  <Hamburger open={true} onClick={[Function: onClick]} />
  <div className=\\"navigation-items open\\" />
</nav>"
`;

exports[`<Navigation/> should render 3`] = `
"<nav>
  <Hamburger open={false} onClick={[Function: onClick]} />
  <div className=\\"navigation-items\\" />
</nav>"
`;
